--- a/Labo3-TemplateBoussole/app/build.gradle
+++ b/Labo3-TemplateBoussole/app/build.gradle
@@ -22,4 +22,11 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+    implementation 'com.google.zxing:core:3.3.0'
+
+}
+
+repositories {
+    jcenter()
 }
