--- a/Labo3-TemplateBoussole/app/src/main/AndroidManifest.xml
+++ b/Labo3-TemplateBoussole/app/src/main/AndroidManifest.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="ch.heigvd.iict.sym.a3dcompassapp">
 
     <uses-permission android:name="android.permission.CAMERA"></uses-permission>
 
+
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -22,7 +25,8 @@
 
         <activity
             android:name=".BarActivity"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
+            tools:replace="screenOrientation"
             android:label="Bar Code">
 
             <meta-data
