--- a/Labo3-TemplateBoussole/app/build.gradle
+++ b/Labo3-TemplateBoussole/app/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
     implementation 'com.google.zxing:core:3.3.0'
+    implementation 'org.altbeacon:android-beacon-library:2.15.2'
+
 
 }
 
