--- a/Labo3-TemplateBoussole/app/src/main/AndroidManifest.xml
+++ b/Labo3-TemplateBoussole/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
     package="ch.heigvd.iict.sym.a3dcompassapp">
 
     <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+
+    <uses-feature android:name="android.hardware.bluetooth"></uses-feature>
 
 
     <application
