--- a/Labo3-TemplateBoussole/app/src/main/AndroidManifest.xml
+++ b/Labo3-TemplateBoussole/app/src/main/AndroidManifest.xml
@@ -7,8 +7,10 @@
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.NFC" />
 
     <uses-feature android:name="android.hardware.bluetooth"></uses-feature>
+    <uses-feature android:name="android.hardware.nfc" android:required="true" />
 
 
     <application
@@ -84,9 +86,21 @@
                 android:value="MainActivity" />
 
             <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
                 <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="@string/mim_type_nfc" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".AuthNFCActivity"
+            android:screenOrientation="portrait"
+            android:label="Authenticated NFC Actions">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".NFCActivity" />
+
         </activity>
 
 
